# FundSimulatorRS

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.json  config_alternative.json  docker-compose.yml
.github/workflows/: ci.yml
.sqlx/: query-8cdeb7c01bc2ac71fca8038da0a2b4597a7779d1dfd67c02278fb8bf32359594.json  query-8cf569ba9749afe87a0fefed322c8461fc11ec2d7fabafb7a68432538f1dd82d.json
config/: default.env
migrations/: 20240203114703_create_real_distributions_table.sql
real_distributions/: msci_world_dist.csv  sp500_dist.csv
src/: cli.rs  configuration.rs  distributions.rs  error.rs  investment.rs  investment_config.rs  lib.rs  main.rs  server.rs  types.rs
