[package]
name = "fund-simulator-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive", "cargo"] }
fake = { version = "2.8.0", features = ["dummy", "derive"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
assert_float_eq = "1.1.3" 
claim = "0.5.0"
fake = "2.8.0"
proptest = "1.3.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
