[package]
name = "fund-simulator-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive", "cargo"] }
config = { version = "0.13.3", features = ["json"] }
csv = "1.3.0"
fake = { version = "2.8.0", features = ["dummy", "derive"] }
rand_distr = "0.4.3"
serde = "1.0.188"
serde_json = "1.0.107"
rand = "0.8.5"
rstest = "0.18.2"
thiserror = "1.0.56"
axum = "0.7.3"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
assert_float_eq = "1.1.3" 
claim = "0.5.0"
fake = "2.8.0"
proptest = "1.3.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
