[package]
name = "fund-simulator-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "fund-simulator-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive", "cargo"] }
csv = "1.3.0"
fake = { version = "2.8.0", features = ["dummy", "derive"] }
rand_distr = "0.4.3"
serde = "1.0.188"
serde_json = "1.0.107"
rand = "0.8.5"
rstest = "0.18.2"
thiserror = "1.0.56"
axum = "0.7.3"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7.3", features = ["tls-rustls", "runtime-tokio", "postgres", "macros"] }
envy = "0.4.2"
config = "0.14.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
assert_float_eq = "1.1.3" 
claim = "0.5.0"
fake = "2.8.0"
proptest = "1.3.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
